--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my",
+  "name": "react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,11 +23,14 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
@@ -46,6 +49,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-refresh": "^0.11.0",
     "react-tsparticles": "^2.1.3",
     "resolve": "^1.20.0",
